--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -291,7 +291,14 @@ header button span {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
+  margin-top: 25rem;
+  margin-bottom: 23.5rem;
+}
+@media screen and (max-width: 576px) {
+  #contacto_contenedor {
+    margin-top: 20rem;
+    margin-bottom: 20rem;
+  }
 }
 #contacto_contenedor h1 {
   color: grey;
