--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -4,7 +4,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5rem;
+    margin-top: 25rem;
+    margin-bottom: 23.5rem;
+
+    @include mobile {
+        margin-top: 20rem;
+        margin-bottom: 20rem;
+    }
 
     h1 {
         color: grey;
